--- a/RestYa/res/values/strings.xml
+++ b/RestYa/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">RestYa Twitter Search</string>
+    <string name="app_name">RestYa</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="err_service_unavailable">Service unavailable</string>
